@@ -2,8 +2,8 @@
 #ifndef PP_CONF_H
 #define PP_CONF_H
 
-//#include "utilarm.h" // keep in sync
-#if defined __arm__ || defined __ARM__ || defined ARM || defined __ARM || defined __arm || defined __ARM_ARCH ||defined __aarch64__ ||( defined(__sun) && defined(__SVR4))
+//#include "utilarm.h" // keep in sync 
+#if defined __arm__ || defined __ARM__ || defined ARM || defined __ARM || defined __arm || defined __ARM_ARCH ||defined __aarch64__ ||defined( __sparc)
 #  define ARM_COMPLIANT 1
 #else
 #  define ARM_COMPLIANT 0
